# PdfAssisstant

./: .gitignore  ProjectTemplate.py  README.md  chunking.py  create_store_embeddings.py  document_parsers.py  exploration.ipynb  logger.py  main.py  pyproject.toml  requirements.txt  setup.py
VectorStore/faiss_index/: chunks.pkl  index.faiss  index.pkl
data/: MEDITATION.docx  diabetes_blog.txt  exercises.md
src/: __init__.py  data_to_vectordb_pipeline.py  exception.py  logger.py  main.py
src/chatbot/: app.py
src/chatbot/app/: main.py  model.py
src/chunking/: chunking_docs.py
src/config/: config.py
src/embeddings/: generate_store_embeddings.py  loading_vector_embeddings.py
src/parser/: document_parsers.py
